--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,7 +3,7 @@ section {
   justify-content: space-between;
   align-items: center;
   width: 40vw;
-  border: 1px solid var(--gray);
+  border: 1px solid rgb(239, 239, 239);
   padding: 0 1em;
   border-radius: 10px;
 }
